# tasknet

./: CMakeLists.txt
src/: main.cpp
src/WindowHandler/: BaseWindow.h  WindowHandler.cpp  WindowHandler.h
